tests/baselines/reference/parserModuleDeclaration3.d.errors.txt
parserModuleDeclaration3.d.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== parserModuleDeclaration3.d.ts (1 errors) ====
    declare module M {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    }